@@ -1,6 +1,5 @@
 AUX fontconfig.Gentoo.properties 10932 RMD160 ce1fb555f3f5f281f328c8016e12407ac0893819 SHA1 59f68c06f4f727bc72449a76bd4941cbee626373 SHA256 893b469c87ba547122fe158941c00512bf3f15046251f4b8639d967203d32bc1
 AUX fontconfig.Gentoo.properties-prefix.patch 2512 RMD160 1671de39c3e0f0d761169ee5b0f123905d11329a SHA1 b295e89509d674732853fa94424b30705b7fd414 SHA256 804919df7b5c2b39cfa667eae9113f7f90a5b5d76ea1824aad910ef7611f7775
-AUX sun-jdk-1.4.env 1052 RMD160 2166e30acbd3775dcd7918cdfe45c0d4f62461f8 SHA1 0d6387806c35f7dba2252cd1f005fc099dfb3cb7 SHA256 165d097954b1daee8e60d2437080d9084a5531c2253098ebd545e937b8a48bf0
 AUX sun-jdk-1.5.env 935 RMD160 545810656c5a090476b9de45ced4fd223eebb1c6 SHA1 b9d268f38c09455c1d39853f56f42125fe2ed72e SHA256 7b775f114c3d833454a18cec45ac375c041fef12c12547a1be5feb95ce071001
 AUX sun-jdk-1.6.env 1016 RMD160 abb6244f50a966e5bb77bb7af67c322980ff060b SHA1 78f65e1b9e0aa81f444cf2f030465061d19fc835 SHA256 e4c4cd1b4a9eac022436c9f530c34e8cd38ce513af529bae8a01b39b7c48ee11
 DIST jdk-5.0u22-dlj-linux-amd64.bin 44213188 RMD160 00cecc02b5a02b00732954f5dab6091697462796 SHA1 5f94db1c775bac2ebcff74581f92891f0a9b4922 SHA256 1182d9c8d06fad7e8fbbb994c06f75b32a096fa50e448a7cbf455825ff4b0b21
@@ -22,7 +21,8 @@ DIST jdk-6u18-dlj-solaris-i586.sh 83600060 RMD160 74fd55cd340ef6e85ff843dc8a4086
 DIST jdk-6u18-dlj-solaris-sparc.sh 81703196 RMD160 d8245c35b4cb9c6003d51a2ae6f659b0b75a7e63 SHA1 de0ae8b28bd266461d952f772ac5d60ae892501b SHA256 6f4f330fa4d1106039b6f2d9569ed7cd522d516d8982a5b3d72be99bcbfa4f2e
 DIST jdk-6u18-dlj-solaris-sparcv9.sh 12145128 RMD160 fe652038ccc3379c77c7e66f4a81f06204088462 SHA1 352844b7e629c3482efd344e2edd87c0af93e3b1 SHA256 320816462ed500332041fee4e3b20389024ffef28a5a0ac7427b51ed558f0f12
 EBUILD sun-jdk-1.5.0.22.ebuild 5212 RMD160 33370b14e8d40fd4dd0da0f1c42c838e664102dc SHA1 c6df01803b031345665633c90cadbdfd0c095e31 SHA256 071c50a7476a291e90d1702556b79e90679237541bcee337414c800a728a52a8
-EBUILD sun-jdk-1.6.0.17.ebuild 6141 RMD160 39fe939233fdd3fe80903868b63f0503c2e8f2ad SHA1 17e927db169d41f1215397fa3980f46ccfec85c4 SHA256 009c1fa91777a63789bc87560b7c87256c26eee9e0cc4ead6000d7e176f8a39c
-EBUILD sun-jdk-1.6.0.18.ebuild 6152 RMD160 4353d48e0e0a31e1948239cca31bd431368ab9f9 SHA1 12d5785924df2e1fbb2ba648ca5f53c1c5a64acf SHA256 6918c39f66744ccdc1a9dc7c9f81e5d37a493678e32822e83740328d89a8b81e
-MISC ChangeLog 51679 RMD160 8e2a1ba7f9769b8e07eba4a5a1b0e1bb13a29c0d SHA1 a71fe4396274e5e34a6dcffe21f75bb34f04ab02 SHA256 bd5502046744c01f8e22a4d1a3363b991288eb2ce624adb58a07ed31e16f3069
+EBUILD sun-jdk-1.6.0.17.ebuild 6033 RMD160 900748e55772f6feeabe8a4c14ad3a973c993398 SHA1 3bd2c47edb017fd927fdbad2486526a3f1a2d463 SHA256 40c37c551b3812940bd11290c305c88fd30371dbe7c9c4bf75d8f8d2d620778e
+EBUILD sun-jdk-1.6.0.18-r1.ebuild 6192 RMD160 c50d5e3892bf22482b9d7c1ab10eb7b9d42e0d3e SHA1 bfa7fff2a7c856777e976396a6efe7b0f122b20e SHA256 04b0e91fe62a30f8ced2c40e60cb1ec58f63f43cbf78382966a82f70b8b2bb5b
+EBUILD sun-jdk-1.6.0.18.ebuild 6044 RMD160 15fdba8d3893cecdacb202e2ee616673c8f10595 SHA1 8593577aae09efee686f249a8c0c4160eb6a526d SHA256 78746063dde72fd18f2f91826aac7eb14a51d51a6c408f4fe5894ac18be15289
+MISC ChangeLog 52173 RMD160 ef65034ab2ce920052776ae808b851b56bf49240 SHA1 5654b30753ae558be4d18be76d6d2f60ea0b40a5 SHA256 8df564fbb690735ec39f85aa174bcb3f01363291dec9afaa8169d435f80da1a4
 MISC metadata.xml 429 RMD160 e6edae84d0d56c48e9d6e631d1f0612535f26f2d SHA1 4b6faf61f3869bbbccc405c7c07932dd630737ea SHA256 2fef8162216b2e78806cdc6ba5b0ff2619a482aa3ce0ecf909ffa17ba309428c
