@@ -1,6 +1,16 @@
 # ChangeLog for dev-java/sun-jdk
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.276 2010/01/23 22:06:31 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.277 2010/02/03 11:27:28 caster Exp $
+
+*sun-jdk-1.6.0.18-r1 (03 Feb 2010)
+
+  03 Feb 2010; Vlastimil Babka <caster@gentoo.org> sun-jdk-1.6.0.17.ebuild,
+  sun-jdk-1.6.0.18.ebuild, +sun-jdk-1.6.0.18-r1.ebuild:
+  Revbump to change the naming and default browser plugin on x86. The
+  default variant (without suffix) is now the 'plugin2' which works with
+  Firefox 3+ including 3.6. The old plugin has '-old_oji' suffix and doesn't
+  work in FF 3.6. Users that had the old plugin set will be switched to the
+  new default automatically.
 
   23 Jan 2010; Vlastimil Babka <caster@gentoo.org> sun-jdk-1.6.0.18.ebuild:
   Add jce also to RDEPEND, as pointed out by Amit Dor-Shifer
